# TuneX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
tunex/: __init__.py  __main__.py  config.py  tokenizer.py
tunex/chat/: base.py  main.py
tunex/models/: __init__.py
tunex/models/gpt2/: model.py
tunex/modules/: attention.py  mlp.py
tunex/text_generation/: main.py
tunex/utils/: convert_from_hf_weights.py  download.py  utilities.py
