[project]
name = "tunex"
version = "0.1.3"
description = "A powerful CLI toolkit offering one shot solution for LLM in running, finetuning and instruction tuning"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "swayaminsync", email = "hawkempire007@gmail.com" },
]
dependencies = [
    "torch==2.2.2",
    "pyyaml==6.0.1",
    "pyfiglet==0.8.post1",
    "numpy==1.24.4",
    "jsonargparse==4.29.0",
    "tokenizers==0.19.1",
    "huggingface-hub>=0.23.4",
    "accelerate==0.31.0",
    "transformers==4.41.2",
]

[project.urls]
homepage = "https://github.com/swayaminsync/tunex"

[project.scripts]
tunex = "tunex.__main__:main"

[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2"
]
build-backend = "setuptools.build_meta"
